# michael_ai_business_analyst

./: .env-sample  .gitignore  README.md  main.py  michael.db  pyproject.toml  requirements.txt
michael/: app.py  config.py  db.py  db_init.py  michael.db  models.py  nlp_parser.py
michael/routes/: api.py
michael/static/: main.js
michael/templates/: index.html
